--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
+    "greenworks": "git+https://github.com/greenheartgames/greenworks.git",
     "source-map-support": "^0.5.16"
   },
+
+  "build": {
+    "appId": "ru.dota2classic.app",
+    "extraFiles": [
+      "steam_appid.txt"
+    ]
+  },
   "devDependencies": {
-    "electron": "8.2.0",
+    "electron": "4.2.12",
     "electron-builder": "^22.4.1",
     "electron-webpack": "^2.8.2",
     "webpack": "~4.42.1"
