--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "greenworks": "git+https://github.com/greenheartgames/greenworks.git",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "source-map-support": "^0.5.16",
     "update-electron-app": "^2.0.1"
   },
@@ -20,9 +22,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.12.1",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "electron": "4.2.12",
     "electron-builder": "^22.4.1",
+    "electron-rebuild": "^2.2.0",
     "electron-webpack": "^2.8.2",
+    "electron-webpack-ts": "^4.0.1",
+    "typescript": "^4.0.3",
     "webpack": "~4.42.1"
+  },
+  "electronWebpack": {
+    "renderer": {
+      "template": "src/index.html"
+    }
   }
+
 }
