--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "electron-webpack dev",
     "compile": "electron-webpack",
-    "dist": "yarn compile && electron-builder",
-    "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
+    "dist": "CSC_LINK=didc.cer CSC_IDENTITY_AUTO_DISCOVERY=true yarn compile && electron-builder",
+    "dist:dir": "CSC_LINK=didc.cer CSC_IDENTITY_AUTO_DISCOVERY=true yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
@@ -21,6 +21,12 @@
   },
   "build": {
     "appId": "ru.dota2classic.app",
+    "productName": "dota2classic launcher",
+    "win": {
+      "target": [
+        "nsis"
+      ]
+    },
     "extraFiles": [
       "steam_appid.txt"
     ]
