some stuff. todo: launch game and join :)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bignumber.js": "^9.0.1",
     "classnames": "^2.2.6",
+    "dataurl": "^0.1.0",
     "greenworks": "git+https://github.com/greenheartgames/greenworks.git",
     "mobx": "^5.11.0",
     "mobx-react": "^6.2.2",
