--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "electron-webpack": "^2.8.2",
     "electron-webpack-ts": "^4.0.1",
     "prettier": "^2.1.2",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.4",
     "typescript": "^4.0.3",
     "webpack": "~4.42.1"
   },
